kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: interlogica-fe
          image: ghcr.io/giusetega/interlogica_front_end:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: interlogica-volume
              mountPath: /usr/share/nginx/html/img
              # mountPath: react-docker-interlogica/public/img

      volumes:
        - name: interlogica-volume
          persistentVolumeClaim:
            claimName: interlogica-pvc
