kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80        # public port
      targetPort: 80 # container port
